--- a/requirements.txt
+++ b/requirements.txt
@@ -69,3 +69,11 @@ uvicorn==0.29.0
 wrapt==1.16.0
 yarl==1.9.4
 docx2txt==0.8
+langchain==0.1.20
+langchain-community==0.0.38
+langchainhub==0.1.15
+langchain-openai==0.1.6
+langchain-chroma==0.1.0
+langchain-text-splitters==0.0.1
+bs4==0.0.2
+unstructured==0.13.7
