--- a/requirements.txt
+++ b/requirements.txt
@@ -36,7 +36,7 @@ nest-asyncio==1.6.0
 networkx==3.2.1
 nltk==3.8.1
 numpy==1.26.4
-openai==1.23.5
+openai>=1.24.0
 packaging==24.0
 pandas==2.2.2
 pillow==10.3.0
