--- a/requirements.txt
+++ b/requirements.txt
@@ -32,7 +32,7 @@ networkx==3.2.1
 nltk==3.8.1
 numpy==1.26.4
 openai>=1.24.0
-packaging==24.0
+packaging
 pandas==2.2.2
 pillow==10.3.0
 pyasn1==0.6.0
