--- a/requirements.txt
+++ b/requirements.txt
@@ -64,12 +64,19 @@ uvicorn==0.29.0
 wrapt==1.16.0
 yarl==1.9.4
 docx2txt==0.8
-langchain==0.1.20
-langchain-community==0.0.38
 langchainhub==0.1.15
 langchain-openai==0.1.6
 langchain-chroma==0.1.2
-langchain-text-splitters==0.0.1
 bs4==0.0.2
-unstructured==0.13.7
 chromadb==0.5.5
+langchain-community
+langchain-text-splitters
+langchain-huggingface
+langchain-groq
+unstructured
+unstructured[pdf]
+nltk==3.8.1
+python-magic==0.4.27
+psycopg2-binary==2.9.10
+python-dotenv== 1.0.1
+pgvector==0.3.6
