Add file extraction functionality and update requirements for langchain support

--- a/requirements.txt
+++ b/requirements.txt
@@ -64,14 +64,14 @@ uvicorn==0.29.0
 wrapt==1.16.0
 yarl==1.9.4
 docx2txt==0.8
-langchainhub==0.1.15
 bs4==0.0.2
+langchain
 langchain-core
 langchain-community
 langchain_openai
 langchain-text-splitters
 langchain-huggingface
-langchain-groq
+langchain-postgres
 unstructured
 unstructured[pdf]
 nltk==3.8.1
